objects/Order_Details__x.object
<CustomObject>
    <description>Order_Details</description>
    <externalDataSource>Odata_Sample</externalDataSource>
    <externalName>Order_Details</externalName>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount</description>
        <externalDeveloperName>Discount</externalDeveloperName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <description>OrderID</description>
        <externalDeveloperName>OrderID</externalDeveloperName>
        <label>OrderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <description>ProductID</description>
        <externalDeveloperName>ProductID</externalDeveloperName>
        <label>ProductID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity</description>
        <externalDeveloperName>Quantity</externalDeveloperName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <description>UnitPrice</description>
        <externalDeveloperName>UnitPrice</externalDeveloperName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Order_Details</label>
    <pluralLabel>Order_Details</pluralLabel>
</CustomObject>